<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/colorCommon"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_arrow"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:id="@+id/backBtn"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/add_project"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_name"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/company_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/project_name"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/project_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_name"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/order_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/scope_of_work"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/scope_of_work"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/from"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/from"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/to"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remarks"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/remarks"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <Button android:id="@+id/btnAddProject"
            android:layout_height="30dp"
            android:layout_width="match_parent"
            android:text="@string/add"
            android:layout_alignParentBottom="true"
            android:background="@color/colorCommon"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>
</LinearLayout>
