<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="in.opamg.app.AddMeasurement"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/colorCommon"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:src="@drawable/ic_left_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="@string/add_measurement"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/linCoordinates">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinate_measurement"
                    android:textColor="@color/colorCommon"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_weight="2"/>
                <ImageView
                    android:id="@+id/openBtn"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="left"
                    android:layout_weight="10"
                    android:src="@drawable/ic_arrow_down" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:hint="@string/lat_d_m_s"
                        android:textSize="10sp"
                        android:editable="false"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:hint="@string/lng_d_m_s"
                        android:textSize="9sp"
                        android:editable="false"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:hint="@string/northing"
                        android:textSize="10sp"
                        android:editable="false"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:hint="@string/easting"
                        android:textSize="10sp"
                        android:editable="false"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
