<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="in.opamg.app.AddManualData"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/colorCommon"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:src="@drawable/ic_left_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="@string/add_manual_data"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/chainage"
                    android:id="@+id/chainage"
                    android:layout_weight="2"
                    android:inputType="numberDecimal"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/offset"
                    android:id="@+id/offset"
                    android:layout_weight="2"
                    android:inputType="numberDecimal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/is_reading"
                    android:id="@+id/is_reading"
                    android:layout_weight="2"
                    android:inputType="numberDecimal"/>
                <AutoCompleteTextView
                    android:id="@+id/search_layers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_layers"
                    android:layout_weight="2">
                </AutoCompleteTextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/remarks"
                    android:id="@+id/remarks"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="2"
                    android:background="@color/colorCommon"
                    android:text="Done"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/done"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="2"
                    android:background="@color/colorCommon"
                    android:text="@string/add"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/add"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/is_reading"
                        android:textColor="@color/colorPrimary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/chainage"
                        android:textColor="@color/colorPrimary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/offset"
                        android:textColor="@color/colorPrimary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Layer"
                        android:textColor="@color/colorPrimary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Action"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>
                <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lstText"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
