<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@color/colorCommon"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/colorCommon"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:src="@drawable/user"
                android:layout_weight="8"/>
            <EditText
                android:id="@+id/empId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:src="@drawable/password"
                android:layout_weight="8"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:id="@+id/password"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:id="@+id/forgetPassword"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCommon"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:id="@+id/login"/>

    </LinearLayout>
</LinearLayout>
